rename package and component to definition
